--- a/css/styles.css
+++ b/css/styles.css
@@ -117,20 +117,18 @@ header {
   letter-spacing: 0.02em;
   color: var(--title-text-backgroud-color);
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-list .nav-link:hover,
 .nav-list .nav-link:focus {
   color: var(--color-hover-focus);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-list .nav-link:active {
   color: var(--color-hover-focus);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .active,
 .nav-link:hover.current::after {
   color: var(--color-hover-focus);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current{
   position: relative;
@@ -162,11 +160,11 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover,
 .address-link:focus {
   color: var(--color-hover-focus);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Контент сторінки */
 main {
@@ -212,12 +210,13 @@ main {
   margin: 0 auto;
   margin-top: 48px;
   outline: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--color-hover-focus);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Секція з рішеннями */
 .section-features {
@@ -325,11 +324,11 @@ main {
   height: 40px;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-icons-list .social-link-icon:hover,
 .card-icons-list .social-link-icon:focus{
   background-color: var(--color-hover-focus);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Секція Customers */
 .customers-icon-list{
@@ -350,19 +349,19 @@ main {
   align-items: center;
   justify-content: center;
   outline: transparent;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo-icon{
   color: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 .customers-icon-list .customers-icon:hover,
 .customers-icon-list .customers-icon:focus{
   border: 1px solid var(--color-hover-focus);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 .customers-icon:hover .logo-icon,
 .customers-icon:focus .logo-icon{
   fill: var(--color-hover-focus);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Підвал сторінки */
@@ -403,11 +402,11 @@ main {
   justify-content: center;
   align-items: center;
   outline: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-icons-list .social-link-icon-footer:hover,
 .card-icons-list .social-link-icon-footer:focus{
   background-color: #31D0AA;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 footer {
@@ -474,13 +473,16 @@ footer {
   padding: 12px 24px;
   border-radius: 4px;
   outline: transparent;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover,
 .button:focus {
-  background: var(--color-hover-focus);
+  background-color: var(--color-hover-focus);
   color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-set {
   display: flex;
